Fix style conflict issue and collaps styling

--- a/src/components/screens/pharamaceutical-establishment/pharamaceutical-establishment.scss
+++ b/src/components/screens/pharamaceutical-establishment/pharamaceutical-establishment.scss
@@ -1,8 +1,33 @@
-.wrapper {
-    width: 70%;
-
+.container-fluid {
+  .card.headCard {
+    margin: 0 auto;
+    width: 60%;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 6px 15px -15px #363333;
+    .card-header {
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      padding: 5px 20px;
+      div.row {
+        display: flex;
+        align-items: center;
+        img {
+          width: 30px;
+          height: 30px;
+        }
+        h3 {
+          font-size: 26px;
+          font-weight: normal;
+          line-height: 40px;
+          margin: 0 10px;
+        }
+      }
+    }
+  }
 }
 .divider {
-    margin-top: 30px;
-    margin-bottom: 20px;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
