--- a/src/components/screens/pharamaceutical-establishment/shared/shared.scss
+++ b/src/components/screens/pharamaceutical-establishment/shared/shared.scss
@@ -1,26 +1,10 @@
 .card {
-  margin: 15px auto;
   border: 0;
-  width: 65%;
-  padding: 15px;
-  border-radius: 10px;
-  box-shadow: 0px 6px 15px -10px #363333;
-  .card-header {
-    display: flex;
-    align-items: center;
-    div.row {
-      img {
-        width: 35px;
-        height: 35px;
-      }
-      h5 {
-        font-size: 33px;
-        font-weight: normal;
-        line-height: 40px;
-        margin: 0 10px;
-      }
-    }
-  }
+  margin: 0;
+  padding: 0;
+  border: 0;
+  border-radius: 0;
+  box-shadow: none;
   .card-body {
     padding: 10px 25px;
     input::placeholder {
